--- a/markup/src/scss/main.scss
+++ b/markup/src/scss/main.scss
@@ -59,6 +59,16 @@ button {
 	cursor: pointer;
 }
 
+@mixin flexMix($fdirection, $ahorizontal, $avertical) {
+	display: flex;
+	flex-direction: $fdirection;
+	justify-content: $ahorizontal;
+	align-items: $avertical;
+}
+
+$color-orange: #fc733f; 
+$color-blue: #1177ee; 
+
 /*Forms*/
 .form--default {
 	.form--row {
@@ -114,8 +124,7 @@ button {
 				flex: 1 1 calc(50% - 26px);
 			}
 		}
-
-	}	
+	}
 
 	.form {
 		&--title {
@@ -187,6 +196,50 @@ button {
 				}
 			}
 		}
+
+		&--radio {
+			position: absolute;
+			left: -20px;
+			visibility: hidden;
+
+			&_label {
+				position: relative;
+				padding-left: 30px;
+				font-size: 16px;
+				line-height: 1.5;
+				letter-spacing: 1.33px;
+				color: #555555;
+				cursor: pointer;
+
+				&:before,
+				&:after {
+					content: '';
+					position: absolute;
+					border: 2px solid rgba(0,0,0,.34);
+					border-radius: 50%;
+				}
+				&:before {
+					top: 0; left: 0;
+					width: 16px;
+					height: 16px;
+				}
+
+				&:after {
+					display: none;
+					top: 4px; left: 4px;
+					width: 12px;
+					height: 12px;
+					border: 0 none;
+					background-color: rgba(0,0,0,.34);
+				}
+			}
+
+			&:checked + .form--radio_label {
+				&:after{
+					display: block;
+				}
+			}
+		}
 	}	
 
 	.reset_btn {
@@ -200,7 +253,7 @@ button {
 
 	.submit_btn,
 	.file_btn {
-	  color: #1177ee;
+	  color: $color-blue;
 
 	  &:hover {
 			color: #fff;
@@ -213,7 +266,7 @@ button {
 		.icons {
 			margin: -3px 5px 0 0;
 			padding: 5px;
-			fill: #1177ee;
+			fill: $color-blue;
 		}
 
 		&:hover {
@@ -224,12 +277,12 @@ button {
 	}
 
 	.delete_btn {
-		color: #fc733f;
+		color: $color-orange;
 
 		&:hover {
 			color: #fff;
 		  box-shadow: 0 8px 20px 0 #e7b7a4;
-		  background-color: #fc733f;
+		  background-color: $color-orange;
 		}
 	}
 } 
@@ -237,21 +290,102 @@ button {
 /*Basic*/
 
 /*HomePage*/
+.home--page {
+	height: 100%;
+	background: url('../img/home_bg.jpg') no-repeat;
+	background-image: image-set(url('../img/home_bg.jpg') 1x, url('../img/home_bg@2x.jpg') 2x, url('../img/home_bg@3x.jpg') 3x);  
+	background-repeat: no-repeat;
+	background-position: 50% 0;
+	background-size: cover;
+
+	.content--main {
+		position: relative;
+		padding: 24px 24px 80px 24px;
+		height: 100%;
+		@include flexMix(column, center, center);
+	}
+
+	.home--logo {
+		position: relative;
+		z-index: 3;
+		margin-bottom: 24px;
+	}
+
+	.home--form {
+		position: relative;
+		z-index: 3;
+
+		&_row {
+			margin-bottom: 24px;
+			text-align: center;
+		}
+
+		&_input {
+			padding: 16px 24px;
+		  font-size: 16px;
+		  line-height: 1.5;
+		  text-align: center;
+		  color: #000000;			
+			border: 0 none;
+			border-bottom: 1px solid #292e3a;
+
+		  &::-webkit-input-placeholder {
+				font-size: 16px;
+	  		color: rgba(0, 0, 0, 0.54);
+			}
+			&::-moz-placeholder {
+				font-size: 16px;
+	  		color: rgba(0, 0, 0, 0.54);
+			}
+			&:-ms-input-placeholder {
+				font-size: 16px;
+	  		color: rgba(0, 0, 0, 0.54);
+			}
+			&:-moz-placeholder {
+				font-size: 16px;
+	  		color: rgba(0, 0, 0, 0.54);
+			}
+
+			&:focus {
+				color: $color-blue;
+				border-color: $color-blue;
+			}
+		}
+
+		&_submit {
+			padding: 12px 48px;
+			font-size: 16px;
+			font-weight: 500;
+			line-height: 1.5;
+			letter-spacing: 1px;
+			color: #ffffff;
+			text-transform: uppercase;
+			border-radius: 2px;
+			background-color: #506671;
+
+			&:hover {
+				box-shadow: 0 8px 20px 0 #9abee8;
+  			background-color: $color-blue;
+			}
+		}
+	}
+}
 /*HomePage*/
 
 /*Content*/
 .content--main { 
 	padding: 24px 24px 80px 96px;
+	min-height: 100%;
 }
 
 /*BreadCrumbs*/
 .breadcrumbs {
-	margin: 0 0 24px 12px;
+	margin: 0 60px 24px 12px;
+	position: relative;
 }
 
 .breadcrumbs,
 .breadcrumbs a {
-	opacity: 0.5;
   font-family: Roboto;
   font-size: 12px;
   font-weight: 500;
@@ -260,12 +394,27 @@ button {
   text-transform: uppercase;
 }
 
+.breadcrumbs a {
+	opacity: 0.5;
+}
+
 .breadcrumbs a:last-child {
 	color: #000;
 }
 
 .breadcrumbs span {
 	padding: 0 5px;
+	opacity: 0.5;
+}
+
+.breadcrumbs .delete_btn {
+	position: absolute;
+	top: -12px;
+	right: -12px;
+
+	.icons {
+		fill: $color-blue;
+	}
 }
 /*BreadCrumbs*/
 
@@ -274,7 +423,7 @@ button {
 	padding: 48px;
 	border-radius: 4px;
   box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
-  background-color: #ffffff;
+  background-color: #fff;
 }
 /*SectionContent*/
 
@@ -323,13 +472,13 @@ button {
 			float: right;
 
 			.btns {
-				color: #1177ee;
+				color: $color-blue;
 				text-transform: uppercase;
 
 				.icons {
 					margin-top: -3px;
 					padding: 5px;
-					fill: #1177ee;
+					fill: $color-blue;
 				}
 
 				&:hover {
@@ -347,7 +496,7 @@ button {
 	.btns:hover {
 		color: #fff;
 	  box-shadow: 0 8px 20px 0 #9abee8;
-	  background-color: #1177ee;
+	  background-color: $color-blue;
 	}
 }
 /*Buttons*/
@@ -392,7 +541,7 @@ button {
 			height: 40px;
 		  font-size: 14px;
 		  line-height: 1.71;
-		  color: #1177ee;
+		  color: $color-blue;
 		  background-color: transparent;
 		  border: 0 none;
 		  z-index: 1;
@@ -420,7 +569,7 @@ button {
 
 			&:hover {
 				opacity: 1;
-				fill: #FC733F;	
+				fill: $color-orange;	
 			}
 		}	
 
@@ -441,7 +590,7 @@ button {
 
 	&:focus {
 		outline: none;
-		border-bottom: 2px solid #1177ee;
+		border-bottom: 2px solid $color-blue;
 
 		& + .tabs--header_search-submit {
 			fill: #17e;
@@ -541,30 +690,59 @@ button {
 			display: none;
 
 			.table--list_cell {
+				position: relative;
 				color: rgba(255,255,255,0.7);	
 			}
 
-			 select {
+			.filter--form_select,
+			.filter--form_input {
+				margin: auto;
+				padding: 3px;
 				color: rgba(255,255,255,0.7);
+			 }
+
+			 .filter--form_select {
 				border: 0 none;
 				background-color: transparent;
 			}
 
-			/*.cell_joined .icons {
-				fill: #000;
-				opacity: 0.7;
+			.filter--form_input {
+				border: 1px solid rgba(255,255,255,0.7);
+				background-color: transparent;
 			}
 
-			.cell_lastlogin .btns {
-				position: absolute;
-				top: -5px;
-				right: 0;
-				background-color: #4d505b;
+			.datepicker-here {
+				display: none;
+				margin-top: 2px;
+				vertical-align: middle;
+			}
 
-				&:hover {
-					background-color: #4d505b;
+			.datepicker_btn {
+				vertical-align: middle;
+
+				 &.off {
+					width: auto;
+					height: auto;
+					padding: 0;
+					display: none;
+					border-radius: 50%;
 				}
-			}*/
+			}
+
+			&.show-datepicker {
+				.datepicker_btn.on {
+					display: none;
+				}
+
+				.datepicker_btn.off {
+					display: inline-block;
+				}
+
+				.datepicker-here {
+					display: inline-block;
+					width: 120px;
+				}
+			}
 		}
 
 		.table--list_cell {
@@ -584,7 +762,7 @@ button {
 				text-align: right;
 			}
 
-			&:not(.cell--filter) .btns {
+			.btns {
 				width: 100%;
 				height: 100%;	
 
@@ -612,6 +790,8 @@ button {
 			text-align: right;
 
 			.btns {
+				width: auto;
+				height: auto;
 
 				&:hover {
 					box-shadow: 0 8px 20px 0 #b8b8b8;
@@ -624,6 +804,7 @@ button {
 
 				.icons {
 					fill: #17e;
+					opacity: 1;
 				}
 			}
 		}
@@ -641,13 +822,6 @@ button {
 			  background-color: rgba(0,0,0,0.04);
 			}
 		}	
-
-		&-total {
-		  opacity: 0.5;
-		  font-size: 12px;
-		  font-weight: 500;
-		  color: #000000;
-		}
 
 		.cell--filter .icons.off,
 		&.show-filter .cell--filter .icons.on {
@@ -817,11 +991,11 @@ button {
 	}
 
 	.delete_btn:hover {
-		background-color: #fc733f;
+		background-color: $color-orange;
 	}
 
 	.decline_btn:hover {
-		background-color: #fc733f;
+		background-color: $color-orange;
 	}
 
 	.verify_btn:hover {
@@ -833,15 +1007,15 @@ button {
 /*Stats*/
 .statistics--tables {
 	.table--list_cell {
-		&:not(.cell-title) {
+		&:not(.cell_title) {
 			flex: 1 1 20%;
 		}
 
-		&.cell-title {
+		&.cell_title {
 			flex: 1 1 20%;
 			font-size: 16px;
 		  letter-spacing: 2px;
-		  color: #1177ee;
+		  color: $color-blue;
 		  text-transform: uppercase;
 		}
 
@@ -851,11 +1025,12 @@ button {
 	}
 
 	.statistics--table_year {
-		.cell-year {
+		.cell_year {
 			font-size: 20px;
 		  font-weight: 300;
 		  line-height: 1.2;
-		  color: #4a4a4a;			
+		  color: #4a4a4a;	
+		  text-align: left;		
 		}
 	}
 }
@@ -867,11 +1042,6 @@ button {
 	.table--list_cell {
 		&:not(.cell--filter),
 		&:not(.cell--editor) {
-			flex: 1 1 8%;
-		}
-
-		&.cell_user,
-		&.cell_email {
 			flex: 1 1 15%;
 		}
 	}
@@ -886,25 +1056,29 @@ button {
 }
 /*Users*/
 
-/*Topics*/
-.topics--tables {
+/*Offers*/
+.offers--tables {
 	.table--list_cell {
-		width: 12%;
+		width: 14%;
 	}
 
-	.cell-title {
+	.cell_title {
 		width: 30%;
 	}
 
+	.cell_duration {
+		padding: 8px;
+	}
+
 	.cell--editor {
-		width: 10%;
+		width: 14%;
 	}
 
 	.cell--editor_menu {
 		width: 180px;
 	}
 }
-/*Topics*/
+/*Offers*/
 
 /*Noresults*/
 .noresults {
@@ -913,7 +1087,7 @@ button {
 	&--count {
 		font-size: 64px;
 	  font-weight: 100;
-	  color: #fc733f;
+	  color: $color-orange;
 	  line-height: 1;
 	}
 
@@ -921,7 +1095,7 @@ button {
 		margin: 4px 0 8px 0;
 		font-size: 24px;
 	  font-weight: 500;
-	  color: #fc733f;
+	  color: $color-orange;
 	  line-height: 1;
 	  text-transform: uppercase;
 	}
@@ -960,13 +1134,29 @@ button {
 
 		&-image {
 			margin-right: 24px;
+			width: 80px;
+			height: 80px;
+			background-color: rgba(0,0,0,0.2);
+			border-radius: 50%;
+			overflow: hidden;
+
+			img {
+				width: 100%;
+				height: auto;
+			}
 		}
 
-		.delete-photo_btn {
+		.delete-photo_btn,
+		.add-photo_btn {
+			margin-right: 12px;
 			font-size: 14px;
 		  font-weight: 500;
 		  line-height: 1.71;
-		  color: #fc733f;
+		  color: $color-orange;
+		}
+
+		.add-photo_btn {
+			color: $color-blue;
 		}
 	}
 
@@ -977,6 +1167,12 @@ button {
 
 		.form--column {
 			width: 32%;
+
+			&:nth-child(2) {
+				margin: 0 18px;
+				padding: 0 18px;
+				border-right: 1px solid #dcdcdc;
+			}
 		}
 	}
 
@@ -991,27 +1187,68 @@ button {
 		}
 	}
 }
-
-.user--edit_content .form--column {
-	width: calc(50% - 48px);
-}
-
-.user--new_content .form--column:nth-child(2) {
-	margin: 0 18px;
-	padding: 0 18px;
-	border-left: 1px solid #dcdcdc;
-	border-right: 1px solid #dcdcdc;
-}
-
-.user--edit_content .form--column:nth-child(1) {
-	padding-right: 48px;
-	border-right: 1px solid #dcdcdc;
-}
-
-.user--edit_content .form--column:nth-child(2) {
-	padding-left: 48px;
-}
 /*UserNewEdit*/
+
+/*OfferNewEdit*/
+.offer--edit {
+	&_header  {
+		margin-bottom: 40px;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: flex-start;
+
+		&-image {
+			margin-right: 24px;
+			width: 300px;
+			height: 100px;
+			background-color: rgba(0,0,0,0.2);
+			overflow: hidden;
+
+			img {
+				width: 100%;
+				height: auto;
+			}
+		}
+
+		.delete-photo_btn,
+		.add-photo_btn {
+			margin-right: 12px;
+			font-size: 14px;
+		  font-weight: 500;
+		  line-height: 1.71;
+		  color: $color-orange;
+		}
+
+		.add-photo_btn {
+			color: $color-blue;
+		}
+	}
+
+	&_content {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+
+		.form--column:nth-child(1) {
+			width: 300px;
+		}
+
+		.form--column:nth-child(2) {
+			padding-left: 24px; 
+			width: calc(100% - 324px);
+		}
+
+		.form--row_submit {
+			margin-top: 24px;
+	    padding-top: 24px;
+	    width: 100%;
+	    text-align: center;
+	    border-top: 1px solid #eee;
+		}
+	}
+}
+/*OfferNewEdit*/
 
 /*Reports*/
 .reports--list {
@@ -1089,14 +1326,14 @@ button {
 					font-size: 20px;
 	  			font-weight: 300;
 	  			line-height: 1.2;
-	  			color: #fc733f;
+	  			color: $color-orange;
 	  		}
 
   			span {
   				display: block;
   				font-size: 48px;
 	  			line-height: 1.2;
-	  			color: #fc733f;
+	  			color: $color-orange;
   			}
 	  	}
 
@@ -1149,51 +1386,18 @@ button {
 
 	&.reports--open {
 		.report--topic_item {
-  		border: solid 1px #fc733f;
+  		border: solid 1px $color-orange;
 
   		&-info {
   			&-user {
-  				color: #fc733f;
+  				color: $color-orange;
   			}
   		}
 
   		&-subject {
   			&-type {
-  				color: #fc733f;
+  				color: $color-orange;
   			}
-  		}
-
-  		&-menu {
-  			display: none;
-  			position: absolute;
-  			top: 100%;
-  			right: 0;
-  			padding: 5px;
-				border-radius: 4px;
-				box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
-				background-color: #ffffff; 			
-
-  			ul {
-  				list-style: none;
-  				text-align: left;
-
-  				li {
-  					.btns {
-  						padding: 2px 6px;
-  						white-space: nowrap;
-
-  						&:hover {
-  							background-color: rgba(0, 0, 0, 0.1);
-  						}
-  					}
-  				}
-  			}
-  		}
-
-  		&.show-menu {
-				.report--topic_item-menu {
-					display: block;
-				}
   		}
 		}
 	}
@@ -1226,12 +1430,10 @@ button {
   		}
 
   		&-btns {
-  			.icons {
-  				display: none;
-  			}
 
 				&:before {
 					content: 'CLOSED';
+					margin-top: 2px;
 					font-size: 12px;
 				  font-weight: 500;
 				  line-height: 2;
@@ -1240,167 +1442,47 @@ button {
   		}
 		}
 	}
-}
-/*Reports*/
 
-/*Ads*/
-.ads {
+	&.reports--open,
+	&.reports--closed {
+		.report--topic_item {
+  		&-menu {
+  			display: none;
+  			position: absolute;
+  			top: 100%;
+  			right: 0;
+  			padding: 5px;
+				border-radius: 4px;
+				box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
+				background-color: #ffffff; 	
+				z-index: 2;		
 
-	&--list {
-		.ads--item {
-			position: relative;
-			float: left;
-			margin-right: 16px;
-			margin-bottom: 16px;
-			width: 270px;
-	  	height: 262px;
-			border-radius: 4px;
-		  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
-		  background-color: #ffffff;
-		  overflow: hidden;
+  			ul {
+  				list-style: none;
+  				text-align: left;
 
-		  &:hover {
-		  	.ads--item_btns {
-		  		display: block;
-		  	}
-		  }
+  				li {
+  					.btns {
+  						padding: 2px 6px;
+  						white-space: nowrap;
 
-		  &_content {
-		  	position: absolute;
-		  	right: 0; bottom: 0; left: 0;
-		  	padding: 16px;
-
-				background-color: #fff;
-		  }
-
-		  &_info {
-		  	margin-bottom: 8px;
-
-		  	&-status {
-		  		float: left;
-		  		font-size: 12px;
-				  font-weight: 500;
-				  line-height: 1.33;
-				  color: #6ebc58;
-		  	}
-
-		  	&-range {
-		  		float: right;
-		  		font-size: 12px;
-				  line-height: 1.33;
-				  color: #4a4a4a;
-		  	}
-		  }
-
-	  	&_title {
-			  font-size: 16px;
-			  font-weight: 500;
-			  line-height: 1.5;
-			  color: #000000;
-	  	}
-
-	  	&_btns {
-	  		display: none;
-	  		position: absolute;
-	  		top: 8px;
-	  		right: 8px;
-	  		z-index: 3;
-
-	  		.btns {
-	  			margin-left: 8px;
-	  			padding: 4px;
-	  			width: 48px;
-				  height: 48px;
-				  fill: #1177ee;
-				  text-align: center;
-				  background-color: #ffffff;
-				  border-radius: 50%;
-	  		}
-	  	}
-
-	  	&.pass {
-
-	  		&:after {
-	  			position: absolute;
-	  			content: '';
-	  			top: 0; right: 0;
-	  			bottom: 0; left: 0;
-	  			opacity: 0.5;
-				  border-radius: 4px;
-				  background-color: #f7f8fc;
-				  z-index: 1;
-	  		}
-	  		.ads--item_info-status {
-	  			color: #000;
-	  		}
-	  	}	  
-		}
-	}
-
-	&--new,
-	&--edit {
-		padding: 40px 220px 120px 220px;
-	  border-radius: 4px;
-	  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
-	  background-color: #ffffff;
-
-		.form--row_file {
-	  	float: left;
-	  }
-
-	  .form--row_image {
-	  	.ads--new_image {
-	  		float: left;
-	  		margin-right: 16px;
-	  		line-height: 0;
-	  		font-size: 0;
-	  		box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.5);
-  			background-color: #d8d8d8;
-
-  			&-info {
-  				float: left;
-  				padding-top: 4px;
-				  font-size: 12px;
-				  line-height: 1.33;
-				  letter-spacing: 0.4px;
-				  color: #000000;
-
-				  span {
-				  	display: block;
-				  }
-
-  				&_name {
-  					margin-bottom: 4px;
-					  font-weight: 500;
-  				}
-
-  				&_size {
-  					opacity: 0.6;
-  				}
-  			}
-
-  			&-btn {
-  				float: right;
-
-					.icons {
-						fill: #1177ee;
-  				}
-
-  				&:hover {
-  					.icons {
-  						fill: #fff;
+  						&:hover {
+  							background-color: rgba(0, 0, 0, 0.1);
+  						}
   					}
   				}
   			}
-	  	}
-	  }
+  		}
 
-	  .form--row_submit {
-	  	float: right;
-	  }	
+  		&.show-menu {
+				.report--topic_item-menu {
+					display: block;
+				}
+  		}
+		}
 	}
 }
-/*Ads*/
+/*Reports*/
 /*Content*/
 
 /*SideBar*/
@@ -1467,8 +1549,8 @@ button {
 					fill: #fff;
 
 					&.logout {
-					  box-shadow: 0 8px 20px 0 #fc733f;
-					  background-color: #fc733f;
+					  box-shadow: 0 8px 20px 0 $color-orange;
+					  background-color: $color-orange;
 					}
 				}
 			}
@@ -1480,7 +1562,7 @@ button {
 		}
 
 		.active .btns .icons {
-			border: 1px solid #1177ee;
+			border: 1px solid $color-blue;
 		}
 	}
 }
@@ -1591,20 +1673,18 @@ button {
 			width: 100%;
 			font-size: 14px;
 		  line-height: 1.71;
-		  color: #1177ee;	
+		  color: $color-blue;	
 		}
 
 		&.warning {
-		  color: #fc733f;	
+		  color: $color-orange;	
 		}
 	}
 
 	&--main {
 		&.show .popup_overlay,
 		&.userdelete .popup--userdelete,
-		&.moderatoradd .popup--moderatoradd,
-		&.topicedit .popup--topicedit,
-		&.topicdelete .popup--topicdelete ,
+		&.offerdelete .popup--offerdelete,
 		&.adsdelete .popup--adsdelete  {
 			display: block;
 		} 
@@ -1617,8 +1697,7 @@ button {
 	display: block;
 	width: 48px;
 	height: 48px;
-	background-image: url("../img/svg/logo.svg");	
-	background-size: 48px 48px;
+	background: url("../img/logo_small.png") no-repeat 50%;	
 }
 
 .icons {
